k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-strategist
  labels:
    name: sales-strategist
    environment: production
